<resources>
    <dimen name="marge_ext">10sp</dimen>
    <string name="appname">Commande Client</string>
    <string name="omnivore">omnivore</string>
    <string name="vegetarian">végétarien</string>
    <string name="vegan">vegan</string>

    <string name="menu_composition">composition menu</string>
    <string name="starter">Entrées</string>
    <string name="main_course">plat</string>
    <string name="dessert">dessert</string>
    <string name="quantity_Tv">quantité</string>
    <string name="quantity_Et">Quantité</string>
    <string name="add">Ajouter</string>
    <string name="recap">Récapitulatif</string>
    <string name="observation">Remarques</string>
    <string name="save">Enregistrer</string>
    <string name="cancel">Annuler</string>


    <string name="app_name">Commande client</string>
    <string name="tv_titre">composition menu</string>
    <string name="sp_entr">Entrées</string>
    <string name="sp_pl">Plats</string>
    <string name="sp_dess">Desserts</string>
    <string name="tv_entr">Entrées</string>
    <string name="tv_plats">Plats</string>
    <string name="tv_desserts">Desserts</string>
    <string name="tv_qte">Quantité</string>
    <string name="et_qte">Quantité</string>
    <string name="b_ajouter">Ajouter</string>
    <string name="tv_recap">Récapitulatif</string>
    <string name="et_remarq">Remarques</string>
    <string name="b_enreg">Enregistrer</string>
    <string name="b_ann">Annuler</string>
    <string name="rb_omnivore">omnivore</string>
    <string name="rb_vegetarien">végétarien</string>
    <string name="rb_vegan">vegan</string>
    <string name="titreAjout">Ajout d\'un élément</string>
    <string name="titreSuppr">Suppression d\'un élément</string>
    <string name="titreMod">Modification d\'un élément</string>
    <string name="b_mod">Modifier</string>
    <string name="b_suppr">Supprimer</string>
    <string name="rb_entr">Entrée</string>
    <string name="rb_plat">Plat</string>
    <string name="rb_dessert">Dessert</string>
    <string name="et_nom">Nom</string>
    <string name="gestionplats">Gestion Plats</string>
    <string name="nouveauplat">Nouveau plat</string>

    <string-array name="entrees">
        <item>Aucun</item>
        <item>Foie gras fait maison</item>
        <item>Saumon fumé</item>
        <item>Salade verte</item>
        <item>Gambas poêlées</item>
    </string-array>

    <string-array name="plats">
        <item>Aucun</item>
        <item>Tournedos de boeuf rossini</item>
        <item>Filet de daurade</item>
        <item>Magret de canard</item>
        <item>Faux filet</item>
        <item>Risottos aux légumes et parmesan</item>
        <item>Lasagnes à la ratatouille</item>
    </string-array>

    <string-array name="desserts">
        <item>Aucun</item>
        <item>Tiramisu maison</item>
        <item>Iles flottantes</item>
        <item>Crème brûlée maison</item>
        <item>Salade de fruits frais</item>
        <item>Mousse au chocolat</item>
    </string-array>

    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>autre</item>
    </string-array>

</resources>
