<?xml version="1.0" encoding="utf-8"?>



<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/Iv_LogoResto"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_weight="70"
            android:src="@drawable/logoresto" />

        <TextView
            android:id="@+id/Tv_TextCompo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/marge_ext"
            android:layout_weight="30"
            android:text="@string/menu_composition"
            android:textSize="24sp"
            android:textStyle="bold|italic"/>

    </LinearLayout>

    <View
        android:id="@+id/Dv_LigneSeparation"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/black" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/view_below"
        android:layout_marginLeft="@dimen/marge_ext"
        android:layout_marginRight="@dimen/marge_ext">

        <RadioButton
            android:id="@+id/Rb_Omnivore"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/omnivore" />

        <RadioButton
            android:id="@+id/Rb_Vegetarien"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/vegetarian" />

        <RadioButton
            android:id="@+id/Rb_Vegan"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/vegan" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="33">

            <TextView
                android:id="@+id/Tv_TextEntree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marge_ext"
                android:text="@string/starter" />

            <Spinner
                android:id="@+id/S_SpinnerEntree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marge_ext"
                android:entries="@array/entrees" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="33">

            <TextView
                android:id="@+id/Tv_TextPlat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marge_ext"
                android:text="@string/main_course" />

            <Spinner
                android:id="@+id/S_SpinnerPlat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marge_ext"
                android:entries="@array/plats" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="33">

            <TextView
                android:id="@+id/Tv_TextDessert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marge_ext"
                android:text="@string/dessert" />

            <Spinner
                android:id="@+id/S_SpinnerDessert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marge_ext"
                android:entries="@array/desserts" />

    </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/Tv_TextQuantite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marge_ext"
        android:text="@string/quantity_Tv" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/S_quantite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marge_ext"
            android:layout_weight="70"
            android:entries="@array/quantity" />

        <EditText
            android:id="@+id/Et_quantite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity_Et"
            android:layout_weight="30"
            android:inputType="number"/>

    </LinearLayout>

    <Button
        android:id="@+id/Bt_Ajouter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marge_ext"
        android:text="@string/add" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars = "vertical"
        android:fillViewport="true">

        <TextView
            android:id="@+id/Tv_TextRecap"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tailleTextRecap"
            android:layout_marginLeft="@dimen/marge_ext"
            android:textSize="18sp"
            android:text="@string/recap" />

    </ScrollView>

    <EditText
        android:id="@+id/Et_remarques"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/observation"
        android:inputType="textCapSentences|textAutoCorrect"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Bt_Enregistrer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marge_ext"
            android:layout_weight="40"
            android:text="@string/save"
            android:textColor="@color/green"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Bt_Annuler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marge_ext"
            android:layout_weight="60"
            android:background="@color/dark_grey"
            android:text="@string/cancel"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>


