<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ParametrageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll_listeCheckbox">
    </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/b_supprimer_gest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b_suppr" />

        <EditText
            android:id="@+id/et_nouveau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nouveauplat"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/b_ajouter_gest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b_ajouter" />

            <EditText
                android:id="@+id/et_mod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nouveauplat"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/b_modifier_gest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b_mod" />

    </LinearLayout>


</LinearLayout>

    </ScrollView>